<resources>
    <string name="app_name">Kiosk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cashier">CashierActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_properties">Properties</string>

    <string name="pref_key_product">pref_key_product</string>
    <string name="pref_title_product">Product</string>

    <string name="pref_key_category">pref_key_category</string>
    <string name="pref_title_category">Category</string>

    <string name="pref_key_transaction_pooling">pref_key_transaction_pooling</string>
    <string name="pref_title_transaction_pooling">Transaction Pooling</string>

    <string name="pref_key_logout">pref_key_logout</string>
    <string name="pref_title_logout">Logout</string>

    <string name="pref_header_data">Data</string>

    <string name="pref_key_default_data">pref_key_default_data</string>
    <string name="pref_title_default_data">Install Default Data</string>

    <string name="pref_key_kiosk_name">pref_key_kiosk_name</string>
    <string name="pref_title_kiosk_name">Kiosk</string>
    <string name="pref_default_kiosk_name">Bakso Pionir</string>

    <string name="pref_key_kiosk_address">pref_key_kiosk_address</string>
    <string name="pref_title_kiosk_address">Address</string>
    <string name="pref_default_kiosk_address">Jl. Erlangga No.18, Ngadirejo, Kediri</string>

    <string name="pref_key_kiosk_phone">pref_key_kiosk_phone</string>
    <string name="pref_title_kiosk_phone">Phone</string>
    <string name="pref_default_kiosk_phone">085212151533</string>

    <string name="pref_key_kiosk_slogan">pref_key_kiosk_slogan</string>
    <string name="pref_title_kiosk_slogan">Slogan</string>
    <string name="pref_default_kiosk_slogan">Pionirnya Bakso Solo &amp; Bakar di Kediri</string>

    <string name="pref_header_printer">Printer</string>
    <string name="pref_key_printer">pref_key_printer</string>
    <string name="pref_default_printer"></string>
    <string name="pref_title_printer">Paired Device</string>

    <string name="pref_key_print_copy_nota">pref_key_print_copy_nota</string>
    <string name="pref_title_print_copy_nota">Print Copy Nota</string>

    <string name="pref_header_server">Server</string>

    <string name="pref_key_server">pref_key_server</string>
    <string name="pref_title_server">IP Address</string>
    <string name="pref_default_server">192.168.0.1</string>

    <string name="pref_key_port">pref_key_port</string>
    <string name="pref_title_port">Port</string>
    <string name="pref_default_port">9090</string>

    <string name="pref_key_email">pref_key_email</string>
    <string name="pref_title_email">User Email</string>
    <string name="pref_default_email"></string>

    <string name="pref_key_password">pref_key_password</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_default_password"></string>

    <string name="pref_header_about">About</string>
    <string name="pref_summary_about">Opensource Point of Sales for Resto</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_summary_version">1.0</string>
    <string name="title_activity_product">Products</string>

    <string name="dialog_title_product_new">New Product</string>
    <string name="dialog_title_product_edit">Edit Product</string>
    <string name="edit_product_id">ID</string>
    <string name="edit_product_name">Name</string>
    <string name="edit_product_category">Category</string>
    <string name="edit_product_price">Price</string>

    <string name="dialog_title_category_new">New Category</string>
    <string name="dialog_title_category_edit">Edit Category</string>
    <string name="edit_category_id">ID</string>
    <string name="edit_category_description">Description</string>

</resources>
